# cover-agent

./: .gitignore  Dockerfile  Makefile  README.md  abc.txt  pyproject.toml
.github/workflows/: ci_pipeline.yml  dockerhub_publish_pipeline.yml  nightly_regression.yml  templated_test_publish_pipeline.yml
cover_agent/: AICaller.py  CoverAgent.py  CoverageProcessor.py  CustomLogger.py  FilePreprocessor.py  LiteLLMAICaller.py  PromptBuilder.py  ReportGenerator.py  Runner.py  UnitTestDB.py  UnitTestGenerator.py  UnitTestValidator.py  database.py  main.py  main_full_repo.py  prompt_template.md  test_generation_prompt.toml  utils.py  version.py  version.txt
cover_agent/coverage/: processor.py
cover_agent/lsp_logic/: ContextHelper.py  PythonContextHelper.py  logic.py
cover_agent/lsp_logic/file_map/: Acknowledgment.md  file_map.py
cover_agent/lsp_logic/multilspy/: Acknowledgment.md  __init__.py  language_server.py  multilspy_config.py  multilspy_exceptions.py  multilspy_logger.py  (+4 more)
cover_agent/settings/: adapt_test_command_for_a_single_test_via_ai.toml  analyze_suite_test_headers_indentation.toml  analyze_suite_test_insert_line.toml  analyze_test_against_context.toml  analyze_test_coverage.toml  analyze_test_run_failure.toml  config_loader.py  configuration.toml  mutation_test_prompt.toml  test_generation_prompt.toml  token_handling.py
docs/: Top_Level_Sequence_Diagram.md  add_new_coverage_type_instructions.md  database_usage.md  development.md  features.md  mutation_testing.md  repo_coverage.md  usage_examples.md
settings/: config.toml  config_loader.py  test_generation_prompt.toml
templated_tests/: README.md
templated_tests/c_cli/: .gitignore  Dockerfile  README.md  build_and_test_with_coverage.sh  calc.c  calc.h  main.c  test_calc.c
templated_tests/cpp_cli/: .gitignore  CMakeLists.txt  Dockerfile  README.md  build_and_test_with_coverage.sh  calculator.cpp  calculator.hpp  main.cpp  test_calculator.cpp
templated_tests/csharp_webservice/: .gitignore  Dockerfile  README.md
templated_tests/github-user-finder/: .gitignore  package.json
templated_tests/go_webservice/: .gitignore  Dockerfile  README.md  app.go  app_test.go  go.mod  go.sum
templated_tests/java_gradle/: Dockerfile  README.md  build.gradle  settings.gradle
templated_tests/java_spring_calculator/: .gitignore  Dockerfile  README.md  pom.xml
templated_tests/js_vanilla/: Dockerfile  README.md  app.js  github.js  index.html  package.json  ui.js  ui.test.js  vitest.config.js
templated_tests/python_fastapi/: Dockerfile  README.md  app.py  requirements.txt  test_app.py
templated_tests/react_calculator/: .gitignore  Dockerfile  README.md  package.json
templated_tests/ruby_sinatra/: Dockerfile  Gemfile  README.md  app.rb  test_app.rb
templated_tests/typescript_calculator/: Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
tests/: test_AICaller.py  test_CoverAgent.py  test_CoverageProcessor.py  test_FilePreprocessor.py  test_PromptBuilder.py  test_ReportGenerator.py  test_Runner.py  test_UnitTestDB.py  test_UnitTestGenerator.py  test_UnitTestValidator.py  test_db.py  test_load_yaml.py  test_main.py  test_version.py
tests/coverage/: test_processor.py
tests_integration/: README.md  analyze_tests.py  increase_coverage.py  test_all.sh  test_with_docker.sh
tests_integration/go_webservice/: Dockerfile  test_with_docker.sh
tests_integration/python_fastapi/: Dockerfile  test_openai.sh  test_with_docker.sh
(+41 files in other folders)
