[tool.poetry]
name = "cover-agent"
version = "0.0.0" # Placeholder. Will be replaced by dynamic versioning.
description = "Cover Agent Tool"
authors = ["CodiumAI <tal.r@codium.ai>"]
license = "Apache 2.0"
readme = "README.md"

# Define where your Python package(s) are
packages = [
    { include = "cover_agent" }
]

[tool.poetry.dependencies]
python = ">=3.8,<3.13"
openai = "^1.19.0"
tiktoken = "^0.6.0"
jinja2 = "^3.1.3"
beautifulsoup4 = "^4.12.3"
pytest-mock = "^3.14.0"
poetry-dynamic-versioning = "^1.3.0"
litellm = { git = "https://github.com/mrT23/litellm.git"}
boto3 = "^1.34.110"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pyinstaller = "^6.6.0"
pytest-cov = "^5.0.0"
fastapi = "^0.104.1"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry.scripts]
cover-agent = "cover_agent.main:main"

[tool.poetry-dynamic-versioning]
enable = true

[tool.poetry-dynamic-versioning.from-file]
source = "cover_agent/version.txt"
